[package]
name = "mock-dex"
version = "0.1.0"
description = "DEX giả, CHỈ dùng cho test — đóng vai Jupiter để kiểm chứng lớp phòng thủ của vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
