[package]
name = "tribe-vault"
version = "0.1.0"
description = "The Tribe — community vault: deposits, redemptions, NAV, shares"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tribe_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
# init_if_needed lets execute_action open a held-position slot the first time the
# vault buys a token. Re-init is guarded explicitly (see execute_action): a fresh
# Asset is populated once, an existing one is fully re-validated.
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.6.1"

